--- a/style.css
+++ b/style.css
@@ -129,8 +129,50 @@ p {
     font-size: 40px;
     line-height: 50px;
 }
+#contact {
+    display: flex;
+    justify-content: space-between;
+}
 #contact a {
     color: #11BA0B;
+}
+#form {
+    border: 1px solid white;
+    display: flex;
+    flex-direction: column;
+    padding: 12px;
+    width: 400px;
+}
+#form h2 {
+    font-size: 40px;
+}
+#form h4 {
+    font-weight: normal;
+}
+#form input, #form textarea {
+    background-color: transparent;
+    border: 1px solid white;
+    margin: 10px 0 20px 0;
+    border-radius: 5px;
+    padding: 5px;
+}
+#form input:focus, #form textarea:focus {
+    border: 1px solid #11BA0B;
+    outline: none;
+}
+#form textarea {
+    height: 150px;
+}
+#submit {
+    width: 100px;
+    padding: 10px;
+    background-color: black;
+    align-self: center;
+    border-radius: 5px;
+    transition: .5s;
+}
+#submit:hover {
+    background-color: #11BA0B;
 }
 .offer {
     display: flex;
@@ -275,6 +317,13 @@ footer .phone {
 @media screen and (max-width: 1110px){
     #about, #offer, #contact, #faq {
         padding: 100px 150px;
+    }
+    #contact {
+        flex-direction: column;
+    }
+    #form {
+        align-self: center;
+        margin-top: 50px;
     }
     #offer img {
         height: 300px;
@@ -424,6 +473,15 @@ footer .phone {
     }
     #about, #offer, #contact, #faq {
         padding: 60px 50px;
+    }
+    #form {
+        width: 95%;
+    }
+    #form h2 {
+        font-size: 30px;
+    }
+    #form h4 {
+        font-size: 20px;
     }
     .offer {
         flex-direction: column-reverse;
