--- a/style.css
+++ b/style.css
@@ -214,8 +214,12 @@ p {
 #form textarea {
     height: 150px;
 }
-.optional span{
+.essential span{
     font-size: .5em;
+}
+.g-recaptcha {
+    display: flex;
+    justify-content: center;
 }
 #submit {
     width: 100px;
