--- a/style.css
+++ b/style.css
@@ -581,7 +581,7 @@ footer span:nth-child(2) {
         font-size: 20px;
     }
     #gallery {
-        padding: 60px 5px;
+        padding: 60px 5px 0 5px;
     }
     #gallery img {
         max-width: 320px;
